fixed z-index nav float

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -233,7 +233,7 @@ h1 {
   left: 0;
   right: 0;
   top: -100vh;
-  z-index: 999;
+  z-index: -5;
   background-color: $blue-main;
   transition: top 0.4s ease-in-out, opacity 0.4s ease-in-out;
 
